# mvr

./: CMakeLists.txt  build_IVFRaBitQ.cpp  eval.h  expr_log.txt  main.cpp  search.cpp  search_exbits.cpp  test.py
RaBitQ-Library/include/rabitqlib/fastscan/: fastscan.hpp
RaBitQ-Library/include/rabitqlib/index/: estimator.hpp
RaBitQ-Library/include/rabitqlib/index/ivf/: cluster.hpp  initializer.hpp  ivf.hpp
RaBitQ-Library/include/rabitqlib/index/symqg/: qg.hpp
RaBitQ-Library/include/rabitqlib/quantization/: data_layout.hpp  rabitq.hpp  rabitq_impl.hpp
RaBitQ-Library/include/rabitqlib/utils/: rotator.hpp  space.hpp  util.h
expr/: rabitqex_ivf_est.cpp  rabitqex_ivf_gather_1bit_est.cpp  rabitqex_ivf_gather_est.cpp  rabitqex_ivf_gather_full.cpp  warp.cpp  warp_rerank.cpp
expr/utils/: utils.h
faiss/faiss/: IndexIVF.cpp
python/: Build_IVF.py  build_ivf.ipynb  build_ivf_hnsw.ipynb  doclens.ipynb
python/Encoding/: collection_encoder.py
